@@ -1125,110 +1125,9 @@ int DboxMain::insertItem(CItemData &itemData, int iIndex,
   }
   StringX cs_fielddata;
 
-  int xint;
-  itemData.GetXTimeInt(xint);
-
   if (iView & iListOnly) {
     // Insert the first column data
-    switch (m_nColumnTypeByIndex[0]) {
-      case CItemData::UUID:
-        cs_fielddata = L"";
-        break;
-      case CItemData::GROUP:
-        cs_fielddata = group;
-        break;
-      case CItemData::TITLE:
-        cs_fielddata = title;
-        break;
-      case CItemData::USER:
-        cs_fielddata = username;
-        break;
-      case CItemData::NOTES:
-        cs_fielddata = strNotes;
-        break;
-      case CItemData::PASSWORD:
-        cs_fielddata = itemData.GetPassword();
-        break;
-      case CItemData::URL:
-        cs_fielddata = itemData.GetURL();
-        break;
-      case CItemData::RUNCMD:
-        cs_fielddata = itemData.GetRunCommand();
-        break;
-      case CItemData::EMAIL:
-        cs_fielddata = itemData.GetEmail();
-        break;
-      case CItemData::CTIME:
-        cs_fielddata = itemData.GetCTimeL();
-        break;
-      case CItemData::PMTIME:
-        cs_fielddata = itemData.GetPMTimeL();
-        break;
-      case CItemData::ATIME:
-        cs_fielddata = itemData.GetATimeL();
-        break;
-      case CItemData::XTIME:
-        cs_fielddata = itemData.GetXTimeL();
-        if (xint != 0)
-          cs_fielddata += L" *";
-        break;
-      case CItemData::XTIME_INT:
-        cs_fielddata = itemData.GetXTimeInt();
-        break;
-      case CItemData::RMTIME:
-        cs_fielddata = itemData.GetRMTimeL();
-        break;
-      case CItemData::POLICY:
-      {
-        PWPolicy pwp;
-        itemData.GetPWPolicy(pwp);
-        if (pwp.flags != 0) {
-          CString cs_pwp(L""), cs_text;
-          if (pwp.flags & PWSprefs::PWPolicyUseLowercase) {
-            cs_pwp += L"L";
-            if (pwp.lowerminlength > 1) {
-              cs_text.Format(L"(%d)", pwp.lowerminlength);
-              cs_pwp += cs_text;
-            }
-          }
-          if (pwp.flags & PWSprefs::PWPolicyUseUppercase) {
-            cs_pwp += L"U";
-            if (pwp.upperminlength > 1) {
-              cs_text.Format(L"(%d)", pwp.upperminlength);
-              cs_pwp += cs_text;
-            }
-          }
-          if (pwp.flags & PWSprefs::PWPolicyUseDigits) {
-            cs_pwp += L"D";
-            if (pwp.digitminlength > 1) {
-              cs_text.Format(L"(%d)", pwp.digitminlength);
-              cs_pwp += cs_text;
-            }
-          }
-          if (pwp.flags & PWSprefs::PWPolicyUseSymbols) {
-            cs_pwp += L"S";
-            if (pwp.symbolminlength > 1) {
-              cs_text.Format(L"(%d)", pwp.symbolminlength);
-              cs_pwp += cs_text;
-            }
-          }
-          if (pwp.flags & PWSprefs::PWPolicyUseHexDigits)
-            cs_pwp += L"H";
-          if (pwp.flags & PWSprefs::PWPolicyUseEasyVision)
-            cs_pwp += L"E";
-          if (pwp.flags & PWSprefs::PWPolicyMakePronounceable)
-            cs_pwp += L"P";
-
-          oStringXStream osx;
-          osx << cs_pwp << L":" << pwp.length;
-          cs_fielddata = osx.str();
-        } else
-          cs_fielddata = L"";
-        break;
-      }
-      default:
-        ASSERT(0);
-    }
+    cs_fielddata = itemData.GetFieldValue((CItemData::FieldType)m_nColumnTypeByIndex[0]);
     iResult = m_ctlItemList.InsertItem(iResult, cs_fielddata.c_str());
 
     if (iResult < 0) {
@@ -1265,101 +1164,7 @@ int DboxMain::insertItem(CItemData &itemData, int iIndex,
   if (iView & iListOnly) {
     // Set the data in the rest of the columns
     for (int i = 1; i < m_nColumns; i++) {
-      switch (m_nColumnTypeByIndex[i]) {
-        case CItemData::GROUP:
-          cs_fielddata = group;
-          break;
-        case CItemData::TITLE:
-          cs_fielddata = title;
-          break;
-        case CItemData::USER:
-          cs_fielddata = username;
-          break;
-        case CItemData::NOTES:
-          cs_fielddata = strNotes;
-          break;
-        case CItemData::PASSWORD:
-          cs_fielddata = itemData.GetPassword();
-          break;
-        case CItemData::URL:
-          cs_fielddata = itemData.GetURL();
-          break;
-        case CItemData::RUNCMD:
-          cs_fielddata = itemData.GetRunCommand();
-          break;
-        case CItemData::EMAIL:
-          cs_fielddata = itemData.GetEmail();
-          break;
-        case CItemData::CTIME:
-          cs_fielddata = itemData.GetCTimeL();
-          break;
-        case CItemData::PMTIME:
-          cs_fielddata = itemData.GetPMTimeL();
-          break;
-        case CItemData::ATIME:
-          cs_fielddata = itemData.GetATimeL();
-          break;
-        case CItemData::XTIME:
-          cs_fielddata = itemData.GetXTimeL();
-          if (xint != 0)
-            cs_fielddata += L" *";
-          break;
-        case CItemData::XTIME_INT:
-          cs_fielddata = itemData.GetXTimeInt();
-          break;
-        case CItemData::RMTIME:
-          cs_fielddata = itemData.GetRMTimeL();
-          break;
-        case CItemData::POLICY:
-        {
-          PWPolicy pwp;
-          itemData.GetPWPolicy(pwp);
-          if (pwp.flags != 0) {
-            CString cs_pwp(L""), cs_text;
-            if (pwp.flags & PWSprefs::PWPolicyUseLowercase) {
-              cs_pwp += L"L";
-              if (pwp.lowerminlength > 1) {
-                cs_text.Format(L"(%d)", pwp.lowerminlength);
-                cs_pwp += cs_text;
-              }
-            }
-            if (pwp.flags & PWSprefs::PWPolicyUseUppercase) {
-              cs_pwp += L"U";
-              if (pwp.upperminlength > 1) {
-                cs_text.Format(L"(%d)", pwp.upperminlength);
-                cs_pwp += cs_text;
-              }
-            }
-            if (pwp.flags & PWSprefs::PWPolicyUseDigits) {
-              cs_pwp += L"D";
-              if (pwp.digitminlength > 1) {
-                cs_text.Format(L"(%d)", pwp.digitminlength);
-                cs_pwp += cs_text;
-              }
-            }
-            if (pwp.flags & PWSprefs::PWPolicyUseSymbols) {
-              cs_pwp += L"S";
-              if (pwp.symbolminlength > 1) {
-                cs_text.Format(L"(%d)", pwp.symbolminlength);
-                cs_pwp += cs_text;
-              }
-            }
-            if (pwp.flags & PWSprefs::PWPolicyUseHexDigits)
-              cs_pwp += L"H";
-            if (pwp.flags & PWSprefs::PWPolicyUseEasyVision)
-              cs_pwp += L"E";
-            if (pwp.flags & PWSprefs::PWPolicyMakePronounceable)
-              cs_pwp += L"P";
-            oStringXStream osx;
-            osx << cs_pwp << L":" << pwp.length;
-            cs_fielddata = osx.str();
-          } else
-            cs_fielddata = L"";
-          break;
-        }
-        default:
-          ASSERT(0);
-      }
+      cs_fielddata = itemData.GetFieldValue((CItemData::FieldType)m_nColumnTypeByIndex[i]);
       m_ctlItemList.SetItemText(iResult, i, cs_fielddata.c_str());
     }
 
